<resources>

    <string name="app_name">FoodiePal - Culinary Companion</string>
    <string name="txt_recipes">Recipes</string>
    <string name="txt_meal_planner">Meal Planner</string>
    <string name="txt_blog">Blog</string>
    <string name="txt_contact">Contact</string>
    <string name="txt_about_me">About Me</string>
    <string name="txt_add">Add</string>
    <string name="txt_author">TVT</string>
    <string name="txt_job">iOS Software Engineer</string>
    <string name="txt_information_details">Information details:\n\nHobbies: traveling, fishing, reading...</string>
    <string name="txt_information">Information</string>
    <string name="txt_title">Title*</string>
    <string name="txt_desc">Description*</string>
    <string name="txt_cancel">Cancel</string>
    <string name="txt_please_input_title">Please input title</string>
    <string name="txt_please_input_desc">Please input description</string>
    <string name="txt_my_contacts">My Contacts</string>
    <string name="txt_mobile_phone">Mobile Phone</string>
    <string name="txt_email_address">Email address</string>
    <string name="txt_linkedin">Linked in</string>
    <string name="txt_github">GitHub</string>
    <string name="txt_new_recipe">New Recipe</string>
    <string name="txt_back">Back</string>

    <string name="txt_sign_in_to_your_account">Sign in to your account</string>
    <string name="txt_email_address_required">Email address*</string>
    <string name="txt_password_required">Password*</string>
    <string name="txt_forgot_password">Forgot password?</string>
    <string name="txt_sign_in">Sign in</string>
    <string name="txt_dont_have_an_account">Do not have an account?</string>
    <string name="txt_create_a_new_account">Create a new account</string>
    <string name="txt_create_your_account">Create your account</string>
    <string name="txt_required_field">* required field</string>
    <string name="txt_first_name">First name*</string>
    <string name="txt_last_name">Last name*</string>
    <string name="txt_password">Password*</string>
    <string name="txt_create_account">Create account</string>

</resources>