<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".dialogs.RecipeDialog">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_new_recipe"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="20dp"
                android:textStyle="bold"
                android:textColor="@color/cyan_700"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/tvName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvTitle"
                android:layout_marginTop="25dp"
                android:layout_marginStart="30dp"
                android:text="Name*"/>
            <EditText
                android:id="@+id/etName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvName"
                android:layout_marginTop="7dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:background="@drawable/bg_curved_grey"
                android:padding="10dp"
                android:minHeight="45dp"
                android:inputType="textCapWords"/>

            <TextView
                android:id="@+id/tvIngredients"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/etName"
                android:layout_marginTop="15dp"
                android:layout_marginStart="30dp"
                android:text="Ingredients*"/>
            <EditText
                android:id="@+id/etIngredients"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvIngredients"
                android:layout_marginTop="7dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:background="@drawable/bg_curved_grey"
                android:padding="10dp"
                android:minHeight="45dp"
                android:inputType="textCapWords"/>

            <TextView
                android:id="@+id/tvInstructions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/etIngredients"
                android:layout_marginTop="15dp"
                android:layout_marginStart="30dp"
                android:text="Instructions*"/>
            <EditText
                android:id="@+id/etInstructions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvInstructions"
                android:layout_marginTop="7dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:background="@drawable/bg_curved_grey"
                android:padding="10dp"
                android:minHeight="45dp"
                android:inputType="textCapWords"/>

            <TextView
                android:id="@+id/tvRatings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/etInstructions"
                android:layout_marginTop="15dp"
                android:layout_marginStart="30dp"
                android:text="Ratings*"/>
            <EditText
                android:id="@+id/etRatings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvRatings"
                android:layout_marginTop="7dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:background="@drawable/bg_curved_grey"
                android:padding="10dp"
                android:minHeight="45dp"
                android:inputType="numberDecimal"
                android:importantForAutofill="no"/>

            <TextView
                android:id="@+id/tvLink"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/etRatings"
                android:layout_marginTop="15dp"
                android:layout_marginStart="30dp"
                android:text="Link"/>
            <EditText
                android:id="@+id/etLink"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvLink"
                android:layout_marginTop="7dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:background="@drawable/bg_curved_grey"
                android:padding="10dp"
                android:minHeight="45dp"
                android:inputType="textUri"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/etLink"
                android:layout_marginTop="30dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnCancel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_cancel"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="15dp"
                    android:layout_weight="1"
                    android:textAllCaps="false"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:padding="10dp"
                    android:layout_marginBottom="20dp"/>

                <Button
                    android:id="@+id/btnAdd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_add"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="30dp"
                    android:layout_weight="1"
                    android:textAllCaps="false"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:padding="10dp"
                    android:layout_marginBottom="20dp"/>

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>